# turing_machine

./: CMakeLists.txt  README.md  main.cpp  turingmachine.cpp  turingmachine.h  turingmachine.ui
